--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   overflow-x: hidden;
 }
 
+/* Banner Styles */
 .banner {
   width: 100%;
   height: 100vh;
@@ -29,7 +30,6 @@ body {
   padding-right: 250px;
 }
 
-/* Banner Text Styles */
 .banner-text {
   position: relative;
   z-index: 2;
